[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
hyper = "0.14"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
